--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
+    "@testing-library/react": "^15.0.6",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
@@ -43,6 +43,7 @@
     "react-test-renderer": "^18.3.1"
   },
   "jest": {
+    "coveragePathIgnorePatterns": ["apiService.js"],
     "moduleNameMapper": {
       "^axios$": "axios/dist/node/axios.cjs"
     }
